--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
-    "react-native-maps": "0.30.2"
+    "react-native-maps": "0.30.2",
+    "expo-web-browser": "~10.2.1",
+    "expo-auth-session": "~3.6.1",
+    "expo-random": "~12.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
