--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "userInterfaceStyle": "light",
     "scheme" : "com.csquad.pocketpickup", 
     "splash": {
-      "image": "app/assets/splash.png",
+      "image": "app/assets/images/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -25,12 +25,12 @@
     "android": {
       "package": "com.csquad.pocketpickup",
       "adaptiveIcon": {
-        "foregroundImage": "app/assets/adaptive-icon.png",
+        "foregroundImage": "app/assets/images/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       }
     },
     "web": {
-      "favicon": "app/assets/favicon.png"
+      "favicon": "app/assets/images/favicon.png"
     }
   }
 }
