--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "react-native-gesture-handler": "~2.2.1",
-    "react-native-reanimated": "~2.8.0"
+    "react-native-reanimated": "~2.8.0",
+    "@gorhom/bottom-sheet": "^4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
