--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4",
     "@react-google-maps/api": "^2.12.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-app-loading": "^2.0.0",
+    "expo-application": "~4.1.0",
     "expo-auth-session": "~3.6.1",
     "expo-font": "^10.1.0",
     "expo-random": "~12.2.0",
@@ -26,15 +28,14 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-circle-button": "^1.0.9",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "0.30.2",
     "react-native-modal-datetime-picker": "^13.1.2",
+    "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7",
-    "react-native-gesture-handler": "~2.2.1",
-    "react-native-reanimated": "~2.8.0",
-    "@gorhom/bottom-sheet": "^4"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
