--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-app-loading": "^2.0.0",
-    "expo-application": "~4.1.0",
     "expo-auth-session": "~3.6.1",
     "expo-font": "^10.1.0",
     "expo-random": "~12.2.0",
@@ -42,6 +41,9 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
     "typescript": "~4.3.5"
+  },
+  "peerDependencies": {
+    "expo-application": "~4.1.0"
   },
   "private": true
 }
